# rules_kotlin

examples/android/libMixedSourcesWithJavaPlugin/: BUILD.bazel
examples/android/libMixedSourcesWithJavaPlugin/src/main/java/examples/java/lib/: ASimpleKotlinInterface.kt  JavaClassUsingKotlinInterface.java
