load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library", "kt_compiler_plugin")
load("@rules_java//java:defs.bzl", "java_plugin")

java_plugin(
    name = "autovalue",
    generates_api = 1,
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    deps = ["@maven//:com_google_auto_value_auto_value"],
)

kt_jvm_library(
    name = "mixed-sources-lib",
    srcs = glob(["src/main/java/**/*.kt", "src/main/java/**/*.java"]),
    plugins = [":autovalue"],
)
